# scripts

./: .bashrc  ai_clipboard.py  ai_clipboard.sh  ai_clipboard_requirements.txt  dockerCleanUp.sh  dockerCleanUp.sh.save  docker_cleanup.sh  docker_cleanup_volume.sh  docker_restart.sh  gitlab_runner_env.sh  heart_beat_eufy.sh  heart_beat_eufy_android.sh  http-proxy.conf  load_generator_eventstorage.sh  n8n_start.sh  noproxy.sh  prepare_docker_compose_env.sh  proxy.sh  proxy_env.sh  pyproject.toml  repairMouse.sh  requirements_wispr.txt  runToxiProxy.sh  searchString.sh  setKeyRate.sh  setproxy.sh  sshDev.sh  start_ollam.sh  start_with_docker_compose_minimal_up.sh  start_with_docker_compose_up.sh  stopProxy.sh  stop_with_docker_compose_down.sh  transcription_listener_offline.py  ubuntu_install_apps.sh  vpn_algosec_lab_connect.sh  vpn_algosec_lab_disconnect.sh  vpn_status.sh  wispr.sh  wispr_installer.sh
